alignment bug fixed

--- a/drupal_site_7/themes/nexus/style.css
+++ b/drupal_site_7/themes/nexus/style.css
@@ -515,7 +515,7 @@ line-height: 100%;
 
 .region-section{
     position:relative;
-    left:12%;
+    left:8%;
 }
 a.frmore{
  
